--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,7 @@
     <footer id="footer" class="w-full bg-gray-900 shadow-lg top-0 z-50 hidden lg:block">
         <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center p-4">
             <!-- Name and Avatar Section -->
+            <a href="/">
             <div class="flex items-center space-x-4 mb-4 md:mb-0">
                 <!-- Avatar -->
                 <img src="/static/avatar.jpeg" alt="Avatar" class="w-12 h-12 rounded-full shadow-md border-2 border-gray-700" />
@@ -57,6 +58,7 @@
                     <p class="text-sm font-medium text-gray-400 italic">aka Alwen</p>
                 </div>
             </div>
+        </a>
             <nav class="flex flex-wrap items-center space-x-4">
                 <a href="#about" class="nav-link text-gray-300 hover:text-blue-300 transition duration-200 ease-in-out">About</a>
                 <a href="#education" class="nav-link text-gray-300 hover:text-blue-300 transition duration-200 ease-in-out">Education</a>
