--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -1,4 +1,3 @@
-
 .terpsichorean-text {
   display: inline-block;
   transform: rotate(-5deg);
@@ -19,4 +18,143 @@
   background-color: rgba(17, 25, 40, 0.57);
   border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.125);
+}
+
+.loader {
+  border: 4px solid #f3f3f3; /* Light gray */
+  border-top: 4px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 768px) {
+  /* Always show hover content on mobile */
+  #project-cards .group .relative .group-hover\:absolute {
+    position: relative !important;
+    opacity: 1 !important;
+  }
+
+  #project-cards .group .relative .group-hover\:opacity-0 {
+    opacity: 0 !important;
+  }
+
+  /* Disable transform effect for mobile */
+  #project-cards .group .relative {
+    transform: none !important;
+  }
+
+  /* Adjust padding and layout for better mobile spacing */
+  #project-cards .group .relative .p-6 {
+    position: relative;
+    opacity: 1 !important;
+  }
+}
+body {
+  overflow: visible;
+  cursor: none;
+  -ms-overflow-style: none; /* Hide scrollbar for IE and Edge */
+  scrollbar-width: none;
+}
+body::-webkit-scrollbar {
+  display: none; /* Hide scrollbar for webkit-based browsers */
+}
+section,
+div {
+  overflow: visible;
+}
+
+/* custom cursor */
+
+.c-cursor {
+  display: none;
+}
+
+@media (any-pointer: fine) {
+  .c-cursor {
+    display: block;
+  }
+
+  .c-cursor__inner {
+    z-index: 9999;
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    mix-blend-mode: difference;
+    border-radius: 50%;
+  }
+
+  .c-cursor__side {
+    position: absolute;
+    top: 50%;
+    width: 5px;
+    height: 1px;
+    background: #fff;
+    opacity: 0;
+  }
+
+  .c-cursor__side--left {
+    right: calc(100% + 5px);
+  }
+
+  .c-cursor__side--right {
+    left: calc(100% + 5px);
+  }
+
+  .c-cursor__inner--circle {
+    width: 25px;
+    height: 25px;
+    border: 1px solid #fff;
+  }
+  a:hover {
+    cursor: none; /* Completely hide default pointer on links */
+  }
+}
+
+#cursor-gradient {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 9999;
+}
+
+/* Hide the cursor gradient on mobile screens */
+@media (max-width: 768px) {
+  #cursor-gradient {
+    display: none;
+  }
+}
+
+
+#canvasContainer {
+  width: 100%;
+  justify-content: center;
+}
+
+#drawingCanvas {
+  max-width: 100%;
+  width: 90vw; /* Make it take up most of the screen width */
+  height: auto; /* Maintain aspect ratio */
+  border: 2px solid #4a4a4a;
+}
+
+@media (max-width: 768px) {
+  #drawingCanvas {
+    width: 95vw;
+    height: 50vh; /* Adjust height for better fit */
+  }
 }
